--- a/GithubUserFinder/index.html
+++ b/GithubUserFinder/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://bootswatch.com/5/minty/bootstrap.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/5/cerulean/bootstrap.min.css">
   <title>GitHub Finder</title>
 </head>
 <body>
@@ -14,6 +14,7 @@
     </div>
   </nav>
   <div class="container searchContainer">
+    <div id="error-placeholder"></div>
     <div class="search card card-body">
       <h1>Search GitHub Users</h1>
       <p class="lead">Enter username to fetch a user profile and repos</p>
